update by huifeng

--- a/SUIBE_DID_Data_Manager/templates/public/certificate.html
+++ b/SUIBE_DID_Data_Manager/templates/public/certificate.html
@@ -1,15 +1,15 @@
 <html>
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script src="../../static/credential/vue.min.js"></script>
+    <script src="../../static/credential/axios.min.js"></script>
     <script src="../../static/build/assets/vendor/jquery/jquery.js"></script>
     <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            src="../../static/credential/popper.min.js"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"
     ></script>
     <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            src="../../static/credential/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"
     ></script>
